# diesel_demo

./: .gitignore  Cargo.toml  README.md
migrations/2024-11-17-001753_add_players/: down.sql  up.sql
migrations/2024-11-17-004504_update_player_name/: down.sql  up.sql
migrations/2024-11-17-013655_change_bool_type/: down.sql  up.sql
src/: lib.rs  schema.rs
src/models/: mod.rs  players.rs  posts.rs
