[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
